# qt

./: .gitignore  BUILD_EXE_GUIDE.md  COMPLETION_CHECKLIST.md  Copilot能力展示报告.md  DEBUG_RUN.bat  DELIVERY_CHECKLIST.md  DELIVERY_REPORT_v2.1.md  ENV_SETUP_GUIDE.md  FILE_INDEX.md  FILE_INDEX_IMPROVEMENTS.md  FINAL_IMPROVEMENTS_SUMMARY.md  FINAL_PROJECT_REPORT.md  GET_EXE_VERSION.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_REPORT.md  NativeMirroringPro.spec  PACKAGING_GUIDE.md  PACKAGING_README.md  PROJECT_COMPLETION_CONFIRMATION.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_IMPROVEMENTS_OVERVIEW.md  QUICK_START.md  README.md  README_GUI.md  README_IMPROVEMENTS.md  README_改进版.md  RUN_DELIVERY.bat  RUN_ENGLISH.bat  RUN_FINAL.bat  adb_manager.py  adb_manager_enhanced.py  adb_manager_fixed.py  auto_build_exe.py  build.py  build_enhanced.py  build_exe.bat  build_exe.ps1  build_exe_complete.bat  build_exe_v2.1.py  build_simple.bat  (+85 more)
.github/: pull_request_template.md
.github/workflows/: build-windows-exe.yml  build-windows.yml  python-app.yml
AndroidMirror/: CLOUD_BUILD_README.md  build_exe.py  main.js  package-lock.json  package.json  preload.js  test_coords.js  verify_real_device_touch.js  web_demo.html
AndroidMirror/src/: index.html
QtScrcpy/: CMakeLists.txt  DELIVERY_V3_CN.md  LICENSE  README.md
QtScrcpy/config/: userdata.ini
QtScrcpy/resources/: resources.qrc
QtScrcpy/src/: main.cpp
QtScrcpy/src/adb/: adbprocess.cpp  adbprocess.h  devicediscovery.cpp  devicediscovery.h  devicemanager.cpp  devicemanager.h  shortcuts.cpp  shortcuts.h  volumecontroller.cpp  volumecontroller.h
QtScrcpy/src/clipboard/: clipboardmanager.cpp  clipboardmanager.h
QtScrcpy/src/decoder/: decoder.cpp  decoder.h
QtScrcpy/src/filetransfer/: filetransfer.cpp  filetransfer.h
QtScrcpy/src/input/: controlmessage.cpp  controlmessage.h  inputhandler.cpp  inputhandler.h
QtScrcpy/src/server/: servermanager.cpp  servermanager.h
QtScrcpy/src/stream/: audiostream.cpp  audiostream.h  controlstream.cpp  controlstream.h  videostream.cpp  videostream.h
QtScrcpy/src/ui/: devicelistdialog.cpp  devicelistdialog.h  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  toolbarwidget.cpp  toolbarwidget.h  videowidget.cpp  videowidget.h
app/: desktop_viewer.py  launcher.py  mirror_server.py
docs/: DEVELOPMENT_GUARDRAILS_CN.md  remote-access.md
docs/change-notes/: 2026-02-12-adb-device-parse-whitespace.md  2026-02-12-adb-diagnostic-trace.md  2026-02-12-adb-runtime-fallback.md  2026-02-12-adb-sync-output-capture.md  2026-02-12-audio-ime-fullscreen-stability.md  2026-02-12-scan-adb-stability.md  2026-02-12-server-stop-error-suppression.md  (+17 more)
phone_mirroring/: IMPLEMENTATION.md  README.md  __init__.py  app.py  app_main.py  client.py  config.json  config.py  control.py  error_handling.py  performance.py  requirements-dev.txt  requirements.txt  screen_capture.py  server.py  start.bat  streaming_manager.py  test_modules.py  video_encoder.py
scripts/: preflight_windows.ps1
tests/: test_end_to_end.py
tools/: mock_mobile.py
web/: index.html
(+16 files in other folders)
